[ft -#166240827] enabling a user to rate an article
